@startuml ChessWeb_ERD
!theme plain
skinparam linetype ortho
skinparam entity {
    BackgroundColor WhiteSmoke
    BorderColor DarkSlateGray
    FontSize 12
    FontStyle bold
}
skinparam note {
    BackgroundColor LightYellow
    BorderColor Orange
}

title Database Schema - ChessWeb System\n(Entity Relationship Diagram)

' ============================================================
' MODULE 1: USER & AUTH
' ============================================================

package "User & Auth Module" #E8F4FD {

    entity "users" as users {
        * id : BIGINT <<PK, AUTO_INCREMENT>>
        --
        * username : VARCHAR(50) <<UNIQUE, NOT NULL>>
        * email : VARCHAR(100) <<UNIQUE, NOT NULL>>
        * password_hash : VARCHAR(255) <<NOT NULL>>
        display_name : VARCHAR(100)
        bio : TEXT
        * is_active : BOOLEAN <<DEFAULT true>>
        * is_verified : BOOLEAN <<DEFAULT false>>
        * created_at : TIMESTAMP <<DEFAULT NOW()>>
        updated_at : TIMESTAMP
        last_login_at : TIMESTAMP
    }

    entity "sessions" as sessions {
        * id : BIGINT <<PK, AUTO_INCREMENT>>
        --
        * user_id : BIGINT <<FK>>
        * token : VARCHAR(512) <<UNIQUE, NOT NULL>>
        refresh_token : VARCHAR(512) <<UNIQUE>>
        ip_address : VARCHAR(45)
        user_agent : TEXT
        * is_active : BOOLEAN <<DEFAULT true>>
        * created_at : TIMESTAMP <<DEFAULT NOW()>>
        * expires_at : TIMESTAMP <<NOT NULL>>
        last_activity_at : TIMESTAMP
    }

    entity "profiles" as profiles {
        * id : BIGINT <<PK, AUTO_INCREMENT>>
        --
        * user_id : BIGINT <<FK, UNIQUE>>
        avatar_url : VARCHAR(500)
        avatar_thumbnail : VARCHAR(500)
        country : VARCHAR(5)
        language : VARCHAR(10) <<DEFAULT 'vi'>>
        timezone : VARCHAR(50)
        preferences : JSON
        social_links : JSON
        * updated_at : TIMESTAMP <<DEFAULT NOW()>>
    }

    entity "user_stats" as user_stats {
        * id : BIGINT <<PK, AUTO_INCREMENT>>
        --
        * user_id : BIGINT <<FK, UNIQUE>>
        * total_games : INT <<DEFAULT 0>>
        * total_wins : INT <<DEFAULT 0>>
        * total_losses : INT <<DEFAULT 0>>
        * total_draws : INT <<DEFAULT 0>>
        * win_rate : DECIMAL(5,2) <<DEFAULT 0.00>>
        * longest_win_streak : INT <<DEFAULT 0>>
        * current_streak : INT <<DEFAULT 0>>
        * total_play_time : INT <<DEFAULT 0, seconds>>
        * last_updated : TIMESTAMP <<DEFAULT NOW()>>
    }

    entity "ratings" as ratings {
        * id : BIGINT <<PK, AUTO_INCREMENT>>
        --
        * user_id : BIGINT <<FK, UNIQUE>>
        * elo_ranked : INT <<DEFAULT 500>>
        * elo_bot : INT <<DEFAULT 500>>
        * elo_tournament : INT <<DEFAULT 500>>
        rank_ranked : VARCHAR(20)
        rank_bot : VARCHAR(20)
        rank_tournament : VARCHAR(20)
        * peak_elo_ranked : INT <<DEFAULT 500>>
        * peak_elo_bot : INT <<DEFAULT 500>>
        * peak_elo_tournament : INT <<DEFAULT 500>>
        * last_updated : TIMESTAMP <<DEFAULT NOW()>>
    }

    entity "email_verifications" as email_verif {
        * id : BIGINT <<PK, AUTO_INCREMENT>>
        --
        * user_id : BIGINT <<FK>>
        * token : VARCHAR(255) <<UNIQUE, NOT NULL>>
        * type : ENUM('verify','reset_password') <<NOT NULL>>
        * created_at : TIMESTAMP <<DEFAULT NOW()>>
        * expires_at : TIMESTAMP <<NOT NULL>>
        used_at : TIMESTAMP
        * is_used : BOOLEAN <<DEFAULT false>>
    }

}

' ============================================================
' MODULE 2: GAMES (CENTRAL)
' ============================================================

package "Game Core Module" #EDF7EE {

    entity "games" as games {
        * id : BIGINT <<PK, AUTO_INCREMENT>>
        --
        * white_player_id : BIGINT <<FK>>
        * black_player_id : BIGINT <<FK>>
        winner_id : BIGINT <<FK, nullable>>
        * game_mode : ENUM('ranked','room','tournament','bot') <<NOT NULL>>
        * result : ENUM('white_win','black_win','draw','ongoing','cancelled') <<DEFAULT 'ongoing'>>
        end_reason : ENUM('checkmate','resignation','timeout','draw_agreement','stalemate','afk','disconnect','abandoned')
        * initial_fen : VARCHAR(100) <<DEFAULT 'startpos'>>
        current_fen : VARCHAR(100)
        pgn : TEXT
        * total_moves : INT <<DEFAULT 0>>
        duration_seconds : INT
        time_control_initial : INT <<seconds>>
        time_control_increment : INT <<seconds>>
        * created_at : TIMESTAMP <<DEFAULT NOW()>>
        finished_at : TIMESTAMP
        ' FK to specialized tables (only one is non-null)
        ranked_match_id : BIGINT <<FK, nullable>>
        room_id : BIGINT <<FK, nullable>>
        tournament_match_id : BIGINT <<FK, nullable>>
        bot_session_id : BIGINT <<FK, nullable>>
    }

    entity "game_moves" as game_moves {
        * id : BIGINT <<PK, AUTO_INCREMENT>>
        --
        * game_id : BIGINT <<FK>>
        * ply : SMALLINT <<NOT NULL, half-move number>>
        * color : ENUM('white','black') <<NOT NULL>>
        * from_square : CHAR(2) <<NOT NULL, e.g. 'e2'>>
        * to_square : CHAR(2) <<NOT NULL, e.g. 'e4'>>
        * piece : CHAR(1) <<NOT NULL, P/N/B/R/Q/K>>
        captured_piece : CHAR(1)
        promotion_piece : CHAR(1)
        * san : VARCHAR(10) <<NOT NULL, e.g. 'e4'>>
        uci : VARCHAR(5)
        fen_after : VARCHAR(100)
        * is_check : BOOLEAN <<DEFAULT false>>
        * is_checkmate : BOOLEAN <<DEFAULT false>>
        * is_castle : BOOLEAN <<DEFAULT false>>
        * is_en_passant : BOOLEAN <<DEFAULT false>>
        time_spent_ms : INT
        * created_at : TIMESTAMP <<DEFAULT NOW()>>
    }

    entity "elo_history" as elo_history {
        * id : BIGINT <<PK, AUTO_INCREMENT>>
        --
        * game_id : BIGINT <<FK>>
        * user_id : BIGINT <<FK>>
        * old_rating : INT <<NOT NULL>>
        * new_rating : INT <<NOT NULL>>
        * change : INT <<NOT NULL>>
        * game_mode : ENUM('ranked','tournament','bot') <<NOT NULL>>
        * created_at : TIMESTAMP <<DEFAULT NOW()>>
    }

}

' ============================================================
' MODULE 3: RANKED
' ============================================================

package "Ranked Module" #FEF9E7 {

    entity "ranked_queue" as ranked_queue {
        * id : BIGINT <<PK, AUTO_INCREMENT>>
        --
        * user_id : BIGINT <<FK>>
        * current_rating : INT <<NOT NULL>>
        * status : ENUM('waiting','matched','left') <<DEFAULT 'waiting'>>
        * joined_at : TIMESTAMP <<DEFAULT NOW()>>
        matched_at : TIMESTAMP
        left_at : TIMESTAMP
    }

    entity "ranked_matches" as ranked_matches {
        * id : BIGINT <<PK, AUTO_INCREMENT>>
        --
        * player1_id : BIGINT <<FK>>
        * player2_id : BIGINT <<FK>>
        winner_id : BIGINT <<FK, nullable>>
        * status : ENUM('waiting','playing','finished','cancelled') <<DEFAULT 'waiting'>>
        forfeit_reason : ENUM('afk','disconnect','none') <<DEFAULT 'none'>>
        player1_time_remaining_ms : INT
        player2_time_remaining_ms : INT
        * start_time : TIMESTAMP
        end_time : TIMESTAMP
    }

    entity "inactivity_timers" as inactivity_timers {
        * id : BIGINT <<PK, AUTO_INCREMENT>>
        --
        * ranked_match_id : BIGINT <<FK>>
        * player_id : BIGINT <<FK>>
        * last_activity_at : TIMESTAMP <<NOT NULL>>
        * max_seconds : INT <<DEFAULT 120>>
        * is_expired : BOOLEAN <<DEFAULT false>>
    }

}

' ============================================================
' MODULE 4: ROOMS (FRIEND GAME)
' ============================================================

package "Room Module" #FDE8F4 {

    entity "rooms" as rooms {
        * id : BIGINT <<PK, AUTO_INCREMENT>>
        --
        * code : VARCHAR(10) <<UNIQUE, NOT NULL>>
        * host_id : BIGINT <<FK>>
        guest_id : BIGINT <<FK, nullable>>
        * status : ENUM('open','ready','in_match','closed') <<DEFAULT 'open'>>
        * created_at : TIMESTAMP <<DEFAULT NOW()>>
        updated_at : TIMESTAMP
        closed_at : TIMESTAMP
    }

    entity "room_settings" as room_settings {
        * id : BIGINT <<PK, AUTO_INCREMENT>>
        --
        * room_id : BIGINT <<FK, UNIQUE>>
        * time_per_player : INT <<DEFAULT 600, seconds>>
        * increment_per_move : INT <<DEFAULT 0, seconds>>
        * is_rated : BOOLEAN <<DEFAULT false>>
    }

}

' ============================================================
' MODULE 5: TOURNAMENT
' ============================================================

package "Tournament Module" #F0E6FF {

    entity "tournaments" as tournaments {
        * id : BIGINT <<PK, AUTO_INCREMENT>>
        --
        * name : VARCHAR(200) <<NOT NULL>>
        description : TEXT
        * organizer_id : BIGINT <<FK>>
        * status : ENUM('draft','published','registration','running','completed','cancelled') <<DEFAULT 'draft'>>
        * start_time : TIMESTAMP
        end_time : TIMESTAMP
        * max_participants : INT <<NOT NULL>>
        * current_participants : INT <<DEFAULT 0>>
        * created_at : TIMESTAMP <<DEFAULT NOW()>>
        updated_at : TIMESTAMP
    }

    entity "tournament_rules" as tournament_rules {
        * id : BIGINT <<PK, AUTO_INCREMENT>>
        --
        * tournament_id : BIGINT <<FK, UNIQUE>>
        * format : ENUM('single_elimination','double_elimination','round_robin','swiss') <<NOT NULL>>
        * time_control : INT <<DEFAULT 600, seconds>>
        * increment_per_move : INT <<DEFAULT 0>>
        * rounds_count : INT <<NOT NULL>>
        tiebreak_rules : TEXT
    }

    entity "tournament_participants" as t_participants {
        * id : BIGINT <<PK, AUTO_INCREMENT>>
        --
        * tournament_id : BIGINT <<FK>>
        * user_id : BIGINT <<FK>>
        * status : ENUM('registered','active','eliminated','withdrawn') <<DEFAULT 'registered'>>
        seed_number : INT
        * registered_at : TIMESTAMP <<DEFAULT NOW()>>
        withdrawn_at : TIMESTAMP
        ' UNIQUE(tournament_id, user_id)
    }

    entity "tournament_rounds" as t_rounds {
        * id : BIGINT <<PK, AUTO_INCREMENT>>
        --
        * tournament_id : BIGINT <<FK>>
        * round_number : INT <<NOT NULL>>
        start_time : TIMESTAMP
        end_time : TIMESTAMP
        * is_completed : BOOLEAN <<DEFAULT false>>
    }

    entity "tournament_pairings" as t_pairings {
        * id : BIGINT <<PK, AUTO_INCREMENT>>
        --
        * round_id : BIGINT <<FK>>
        * white_player_id : BIGINT <<FK>>
        * black_player_id : BIGINT <<FK>>
        tournament_match_id : BIGINT <<FK, nullable>>
        table_number : INT
    }

    entity "tournament_matches" as t_matches {
        * id : BIGINT <<PK, AUTO_INCREMENT>>
        --
        * tournament_id : BIGINT <<FK>>
        * round_id : BIGINT <<FK>>
        * white_player_id : BIGINT <<FK>>
        * black_player_id : BIGINT <<FK>>
        winner_id : BIGINT <<FK, nullable>>
        * result : ENUM('white_win','black_win','draw','ongoing','cancelled') <<DEFAULT 'ongoing'>>
        pgn : TEXT
        start_time : TIMESTAMP
        end_time : TIMESTAMP
    }

    entity "tournament_standings" as t_standings {
        * id : BIGINT <<PK, AUTO_INCREMENT>>
        --
        * tournament_id : BIGINT <<FK>>
        * participant_id : BIGINT <<FK>>
        * rank : INT <<DEFAULT 0>>
        * points : DECIMAL(6,2) <<DEFAULT 0.00>>
        * wins : INT <<DEFAULT 0>>
        * losses : INT <<DEFAULT 0>>
        * draws : INT <<DEFAULT 0>>
        buchholz : DECIMAL(8,2)
        sonneborn_berger : DECIMAL(8,2)
        * last_updated : TIMESTAMP <<DEFAULT NOW()>>
        ' UNIQUE(tournament_id, participant_id)
    }

}

' ============================================================
' MODULE 6: BOT & REPLAY
' ============================================================

package "Bot & Replay Module" #FDECEA {

    entity "bot_sessions" as bot_sessions {
        * id : BIGINT <<PK, AUTO_INCREMENT>>
        --
        * user_id : BIGINT <<FK>>
        * difficulty : TINYINT <<1-10>>
        * engine : VARCHAR(50) <<DEFAULT 'stockfish'>>
        * depth : TINYINT <<DEFAULT 10>>
        * skill_level : TINYINT <<0-20>>
        * time_limit_ms : INT <<DEFAULT 3000>>
        user_color : ENUM('white','black') <<DEFAULT 'white'>>
        engine_pid : INT
        * is_active : BOOLEAN <<DEFAULT true>>
        * created_at : TIMESTAMP <<DEFAULT NOW()>>
        last_move_at : TIMESTAMP
    }

}

' ============================================================
' RELATIONSHIPS
' ============================================================

' --- User Module ---
users ||--o{ sessions : "has"
users ||--|| profiles : "has"
users ||--|| user_stats : "has"
users ||--|| ratings : "has"
users ||--o{ email_verif : "has"

' --- Games Central ---
users ||--o{ games : "plays as white"
users ||--o{ games : "plays as black"
games ||--o{ game_moves : "contains"
games ||--o{ elo_history : "generates"
users ||--o{ elo_history : "tracks"

' --- Ranked ---
users ||--o{ ranked_queue : "joins"
users ||--o{ ranked_matches : "player1"
users ||--o{ ranked_matches : "player2"
ranked_matches ||--o{ inactivity_timers : "has"
games ||--o| ranked_matches : "linked to"

' --- Rooms ---
users ||--o{ rooms : "hosts"
rooms ||--|| room_settings : "has"
games ||--o| rooms : "played in"

' --- Tournaments ---
users ||--o{ tournaments : "organizes"
tournaments ||--|| tournament_rules : "has"
tournaments ||--o{ t_participants : "has"
users ||--o{ t_participants : "is"
tournaments ||--o{ t_rounds : "contains"
t_rounds ||--o{ t_pairings : "has"
t_pairings ||--o| t_matches : "creates"
tournaments ||--o{ t_matches : "contains"
t_rounds ||--o{ t_matches : "contains"
tournaments ||--o{ t_standings : "has"
t_participants ||--|| t_standings : "tracked by"
games ||--o| t_matches : "linked to"

' --- Bot ---
users ||--o{ bot_sessions : "starts"
games ||--o| bot_sessions : "played via"

' ============================================================
' NOTES
' ============================================================

note bottom of games
  **CENTRAL GAME TABLE**
  Tất cả các loại ván đấu đều
  được ghi lại ở đây.
  Chỉ một trong các FK:
  ranked_match_id / room_id /
  tournament_match_id / bot_session_id
  là non-null theo game_mode.
end note

note right of ratings
  **ELO mặc định**: 500
  rank_ranked: Beginner/Amateur/
  Intermediate/Advanced/Expert/Master
  Tính theo chuẩn FIDE
end note

note right of ranked_queue
  **Matchmaking logic**:
  Tìm đối thủ trong rating ±100
  Nếu chờ > 60s: mở rộng ±200
  Timeout: 5 phút
end note

note bottom of t_standings
  **buchholz**: Tổng điểm đối thủ
  **sonneborn_berger**: Điểm tiebreak
  nâng cao theo chuẩn FIDE
end note

@enduml
